--- a/soal/templates/soal/base.html
+++ b/soal/templates/soal/base.html
@@ -7,6 +7,7 @@
     Sistem Keamanan Soal
     {% endblock %}
     </title>
+    <link rel="stylesheet" type="text/css" href="{% static 'soal/base/base.css' %}"/>
 </head>
 <body>
     <div class="header">
