memperbaiki penamaan plural pada model password manager di halaman index admin.

--- a/soal/static/soal/base/base.css
+++ b/soal/static/soal/base/base.css
@@ -29,3 +29,9 @@ td {
     padding-left: 10px;
     vertical-align: center;
 }
+
+h1 {
+    padding:2px;
+    background:green;
+    color:white;
+}
