dekorasi tampilan upload file

--- a/soal/templates/soal/inc/navigasi.html
+++ b/soal/templates/soal/inc/navigasi.html
@@ -1,5 +1,5 @@
 <nav class="uk-navbar uk-margin-large-bottom">
-    <a class="uk-navbar-brand uk-hidden-small" href="layouts_frontpage.html">
+    <a class="uk-navbar-brand uk-hidden-small" href="#">
         <i class="uk-icon-user"></i> {{ request.user.username }}</a>
         <ul class="uk-navbar-nav uk-hidden-small">
             <li class="{% block active_home %}{% endblock %}">
