--- a/soal/templates/soal/login.html
+++ b/soal/templates/soal/login.html
@@ -8,15 +8,17 @@
         <link rel="apple-touch-icon-precomposed" href="{% static 'soal/images/logo.png' %}">
         <link rel="stylesheet" href="{% static 'soal/uikit/css/uikit.min.css' %}">
         <script src="{% static 'soal/jquery/jquery.js' %}"></script>
-        <script src="{% static 'soal/uikit/js/uikit.min.js' %}"></script>
+        <script src="{% static 'soal/uikit/js/uikit.js' %}"></script>
     </head>
 
 <body class="uk-height-1-1">
     <div class="uk-vertical-align uk-text-center uk-height-1-1">
         <div class="uk-vertical-align-middle" style="width: 250px;">
-            <img class="uk-margin-bottom" src="{% static 'soal/images/logo.png' %}" alt="" height="120" width="140">
+            
+            <img class="uk-margin-bottom" src="{% static 'soal/images/logo.png' %}" >
+            <h3 class="uk-text-success">Login Sistem Keamanan Soal</h3>
             {% if form.errors %}
-            <p>Your username and password didn't match. Please try again.</p>
+            <p class="uk-text-danger">Username dan Password tidak cocok, silahkan coba kembali.</p>
             {% endif %}
             <form class="uk-panel uk-panel-box uk-form" action="{% url 'login' %}" method="post">
                 {% csrf_token %}
@@ -28,7 +30,7 @@
                     <input name="password" class="uk-width-1-1 uk-form-large" placeholder="Password" type="password">
                 </div>
                 <div class="uk-form-row">
-                    <input type="submit" name="submit" value="Login" class="uk-width-1-1 uk-button uk-button-primary uk-button-large">
+                    <input type="submit" name="submit" value="Login" class="uk-width-1-1 uk-button uk-button-success uk-button-large">
                     <input type="hidden" name="next" value="{{ next }}"/>
                 </div>
                 
