Menambahkan fitur pagination di halaman home guru.

--- a/soal/templates/soal/base.html
+++ b/soal/templates/soal/base.html
@@ -25,6 +25,12 @@
     {% block content %}
     {% endblock %}
     </div>
+
+    <div class="uk-grid uk-grid-small">
+    {% block pagination %}
+
+    {% endblock %}
+    </div>
     </div>
 
     <script src="{% static 'soal/jquery/jquery.js' %}"></script>
