Menambahkan fitur pencarian di halaman home guru.

--- a/soal/templates/soal/soal_list.html
+++ b/soal/templates/soal/soal_list.html
@@ -40,7 +40,7 @@
 <ul class="uk-pagination">
 {% if page_obj.has_previous %}
     <li>
-        <span><a href="?page={{ page_obj.previous_page_number }}">Previous</a></span>
+        <span><a href="?q={{ q }}&page={{ page_obj.previous_page_number }}">Previous</a></span>
     </li>
 {% endif %}
     <li class="">
@@ -48,7 +48,7 @@
     </li>
 {% if page_obj.has_next %}
     <li>
-        <span><a href="?page={{ page_obj.next_page_number }}">Next</a></span>
+        <span><a href="?q={{ q }}&page={{ page_obj.next_page_number }}">Next</a></span>
     </li>
 {% endif %}
 </ul>
