--- a/soal/templates/soal/inc/navigasi.html
+++ b/soal/templates/soal/inc/navigasi.html
@@ -23,9 +23,18 @@
             <li class="">
                 <a href="{% url 'adminsitetu:logout' %}">Keluar</a>
             </li>
+            
             {% endif %}
             
         </ul>
+        {% if not request.user.is_staff %}
+        <div class="uk-navbar-content uk-hidden-small uk-navbar-flip">
+            <form class="uk-form uk-margin-remove uk-display-inline-block">
+                <input placeholder="Cari Nama File" type="text" name="q" value="{{ q }}">
+            </form>
+        </div>
+        {% endif %}
+        
     <a href="#offcanvas" class="uk-navbar-toggle uk-visible-small" data-uk-offcanvas=""></a>
     <div class="uk-navbar-brand uk-navbar-center uk-visible-small">Brand</div>
 </nav>
